# static-serve

./: .gitattributes  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
static-serve/: Cargo.toml  README.md  clippy.toml
static-serve-macro/: Cargo.toml
static-serve-macro/src/: error.rs  lib.rs
static-serve/src/: lib.rs
static-serve/tests/: tests.rs
test_assets/big/: app.js  styles.css
test_assets/with_html/: index.html  index2.htm
test_unknown_extensions/: example.wtf
