[workspace]
members = [
    "static-serve",
    "static-serve-macro",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
description = "A helper for compressing and embedding static assets in an Axum webserver"
repository = "https://github.com/M4SS-Code/static-serve"
license = "MIT OR Apache-2.0"
keywords = ["static", "axum", "embed", "web", "conditional"]
categories = ["web-programming", "web-programming::http-server", "filesystem"]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
await_holding_refcell_ref = "deny"
map_unwrap_or = "warn"
needless_lifetimes = "warn"
needless_raw_string_hashes = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
clone_on_ref_ptr = "warn"
